# SIGMA

./: .gitignore  ARCHITECTURE.md  README.md  docker-compose.yml  pyproject.toml
docs/: DEVELOPMENT-PLAN.md
docs/adr/: ADR-001_-_Estructura del repositorio.md  ADR-002_-_Stack de infraestructura GCP.md  ADR-003_-_Base de datos Firestore.md  ADR-004_-_Gestión de secretos.md  ADR-005_-_Comunicación entre componentes.md  ADR-006_-_Bounded_Context.md  ADR-007_-_Space_Aggregate_Root.md  ADR-008_-_Card_Aggregate_Root.md  ADR-009_-_PreWorkflowStage.md  ADR-010_-_WIP_Limit.md  ADR-011_-_Area_Project_PARA.md  ADR-012_-_Column_Presentacion.md  ADR-013_-_Testing_Strategy.md  ADR-014_-_Adapter_Patterns.md  DECISIONS.md  DECISIONS_V2.md
docs/design/: API-REST-CATALOGUE.md  ARCHITECTURE-DIAGRAM.md  COMMUNICATION-FLOWS.md  FIRESTORE-DESIGN.md  MCP-TOOLS-CATALOGUE.md  OpenApicontract.md  UI-DESIGN.md  sigma-domain-design-v2.md
docs/release/v2-planning-BC/: RELEASE.md  openapi.json
docs/release/v2-v3-frontend/: RELEASE.md
docs/release/v3-metrics-BC/: RELEASE.md  openapi.json
docs/release/v4-tracking-BC/: RELEASE-frontend.md  RELEASE.md  openapi.json
src/sigma/: __init__.py
