[project]
name = "sigma"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = []

[project.scripts]
sigma = "sigma:main"

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "packages/sigma-core",
    "packages/sigma-mcp",
    "packages/sigma-rest",
]

[dependency-groups]
dev = [
    "behave>=1.3.3",
]
