[project]
name = "sigma"
version = "0.1.0"
description = "SIGMA — Sistema Inteligente de Gestión y Monitorización de Actividades"
readme = "README.md"
requires-python = ">=3.13.11"
dependencies = []

[build-system]
requires = ["uv_build>=0.9.22,<0.10.0"]
build-backend = "uv_build"

[tool.uv.workspace]
members = [
    "packages/sigma-core",
    "packages/sigma-mcp",
    "packages/sigma-rest",
]

[tool.pyright]
include = [
    "packages/sigma-core/src",
    "packages/sigma-rest/src",
    "packages/sigma-mcp/src",
]
extraPaths = [
    "packages/sigma-core/tests",
]
pythonVersion = "3.13"
typeCheckingMode = "basic"

[dependency-groups]
dev = [
    "pyright",
]
